force-app/main/default/objects/Expenses_Detail__c/Expenses_Detail__c.object-meta.xml
<CustomObject>
    <label>费用详细</label>
    <nameField>
        <displayFormat>ED-{000000000}</displayFormat>
        <label>名称</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>