force-app/main/default/objects/Expenses_Detail__c/fields/Expense_Categories__c.field-meta.xml
<CustomField>
    <fullName>Expense_Categories__c</fullName>
    <label>费用大类</label>
    <length>200</length>
    <type>Text</type>
</CustomField>