force-app/main/default/objects/Expenses_Detail__c/fields/Expense_Projects__c.field-meta.xml
<CustomField>
    <fullName>Expense_Projects__c</fullName>
    <label>费用项目</label>
    <length>200</length>
    <type>Text</type>
</CustomField>