force-app/main/default/objects/Expenses_Detail__c/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>付款方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>