force-app/main/default/objects/Expenses_Detail__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>付款申请</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>费用详细</relationshipLabel>
    <relationshipName>Expense_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>