force-app/main/default/objects/Expenses_Detail__c/fields/Payment_Object__c.field-meta.xml
<CustomField>
    <fullName>Payment_Object__c</fullName>
    <label>付款对象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP/HCO</fullName>
            </value>
            <value>
                <fullName>第三方供应商</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>