force-app/main/default/objects/Expenses_Detail__c/fields/Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Product_Codes__c</fullName>
    <label>产品代码</label>
    <length>200</length>
    <type>Text</type>
</CustomField>