force-app/main/default/objects/Expenses_Detail__c/fields/Vendor_Remark__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Remark__c</fullName>
    <label>Vendor  Remark</label>
    <length>200</length>
    <type>Text</type>
</CustomField>