force-app/main/default/objects/Expenses_Detail__c/fields/VendorID__c.field-meta.xml
<CustomField>
    <fullName>VendorID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>费用详细</relationshipLabel>
    <relationshipName>Expense_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>